tests/baselines/reference/topLevelAwaitNonModule.errors.txt
tests/cases/conformance/externalModules/topLevelAwaitNonModule.ts(1,1): error TS1375: 'await' expressions are only allowed at the top level of a file when that file is a module, but this file has no imports or exports. Consider adding an empty 'export {}' to make this file a module.
tests/cases/conformance/externalModules/topLevelAwaitNonModule.ts(1,7): error TS2304: Cannot find name 'x'.


==== tests/cases/conformance/externalModules/topLevelAwaitNonModule.ts (2 errors) ====
    await x;
    ~~~~~
!!! error TS1375: 'await' expressions are only allowed at the top level of a file when that file is a module, but this file has no imports or exports. Consider adding an empty 'export {}' to make this file a module.
          ~
!!! error TS2304: Cannot find name 'x'.
    